fix issues with body content not auto stretching

--- a/src/styles/App.scss
+++ b/src/styles/App.scss
@@ -3,5 +3,5 @@
 .container {
   min-height: 100%;
   display: grid;
-  grid-template-rows: 5% 90% 5%;
+  grid-template-rows: 5% 87% 8%;
 }
