--- a/src/styles/template.scss
+++ b/src/styles/template.scss
@@ -3,21 +3,23 @@
 .template {
   display: grid;
   grid-template-columns: 20% 60% 20%;
-  grid-template-rows: 100px auto auto;
+  grid-auto-rows: max-content;
   grid-template-areas:
     '. title .'
     '. message .'
     '. form .';
-  grid-row-gap: 25px;
 
   @media only screen and (max-width: 880px) {
     grid-template-columns: 5% 90% 5%;
   }
 
+  @media only screen and (min-width: 1500px) {
+    grid-template-columns: 30% 40% 30%;
+  }
+
   .title {
     grid-area: title;
-    margin: 1em 0em 0em;
-    background-color: yellow;
+    // background-color: yellow;
   }
 
   .message {
@@ -29,6 +31,7 @@
     border: 2px solid $divider-color;
     background-color: transparent;
     align-self: start;
+    margin: 0em 0em 25px;
   }
 
   .form {
